[gd_scene load_steps=21 format=3 uid="uid://crnn0nqwx21rh"]

[ext_resource type="FontVariation" uid="uid://culrlsi316p0y" path="res://media/font/m3x6.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://s7e12rs806hl" path="res://media/image/9slice.png" id="2"]
[ext_resource type="Script" path="res://src/menu/StartMenu.gd" id="3"]
[ext_resource type="FontVariation" uid="uid://cntu078xgj2oj" path="res://media/font/m6x11.tres" id="3_k8w8k"]
[ext_resource type="AudioStream" uid="uid://c0sja8q4h5lm4" path="res://media/audio/sfx/hit1.wav" id="7"]
[ext_resource type="PackedScene" uid="uid://c3tsbvbfy7tmu" path="res://src/stage/DetailTileMap.tscn" id="8"]
[ext_resource type="PackedScene" path="res://src/actor/Box.tscn" id="9"]
[ext_resource type="Script" path="res://src/menu/AttractMode.gd" id="10"]
[ext_resource type="PackedScene" uid="uid://ccgl186gosdcp" path="res://src/stage/SolidTileMap.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://bleh1qiiufduy" path="res://src/actor/Player.tscn" id="12"]
[ext_resource type="PackedScene" path="res://src/stage/GameCamera.tscn" id="13"]
[ext_resource type="PackedScene" path="res://src/actor/SwitchBlockBlue.tscn" id="14"]
[ext_resource type="PackedScene" path="res://src/actor/SwitchBlue.tscn" id="15"]
[ext_resource type="FontVariation" uid="uid://3vc5iho8ho52" path="res://media/font/m5x7.tres" id="17"]
[ext_resource type="AudioStream" uid="uid://3d7jvhtcwlpd" path="res://media/audio/sfx/sfx3.wav" id="18"]
[ext_resource type="AudioStream" uid="uid://dv7i1pd4dhxoi" path="res://media/audio/sfx/sfx18.wav" id="19"]
[ext_resource type="AudioStream" uid="uid://djqicpqqb3c3t" path="res://media/audio/sfx/sfx13.wav" id="20"]
[ext_resource type="AudioStream" uid="uid://gqspthpv6a4l" path="res://media/audio/sfx/portal9.wav" id="21"]
[ext_resource type="AudioStream" uid="uid://daloj1lhr4ev3" path="res://media/audio/sfx/Randomize105.wav" id="22"]
[ext_resource type="AudioStream" uid="uid://bd5iht8uibqik" path="res://media/audio/sfx/portal7.wav" id="23"]

[node name="StartMenu" type="Node2D"]
script = ExtResource("3")

[node name="Menu" type="Node2D" parent="."]
z_index = 20
z_as_relative = false
position = Vector2(-18, 8)

[node name="Cursor" type="ColorRect" parent="Menu"]
show_behind_parent = true
offset_left = 15.0
offset_top = 47.0
offset_right = 44.0
offset_bottom = 57.0
color = Color(0.113725, 0.168627, 0.32549, 1)

[node name="List" type="Label" parent="Menu"]
modulate = Color(1, 0.945098, 0.909804, 1)
offset_left = 12.0
offset_top = 48.0
offset_right = 48.0
offset_bottom = 89.0
theme_override_fonts/font = ExtResource("1")
text = "play
options
credits
quit"
horizontal_alignment = 1

[node name="Quit" type="Control" parent="Menu"]
layout_mode = 3
anchors_preset = 0
offset_left = 80.0
offset_top = 44.0
offset_right = 120.0
offset_bottom = 84.0

[node name="NinePatchRect" type="NinePatchRect" parent="Menu/Quit"]
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 69.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="List" type="Label" parent="Menu/Quit"]
modulate = Color(1, 0.945098, 0.909804, 1)
layout_mode = 0
offset_left = 18.0
offset_top = 17.0
offset_right = 50.0
offset_bottom = 36.0
theme_override_fonts/font = ExtResource("1")
text = "yes
no"
horizontal_alignment = 1

[node name="Header" type="Label" parent="Menu/Quit"]
modulate = Color(1, 0.945098, 0.909804, 1)
layout_mode = 0
offset_left = -53.0
offset_top = 4.0
offset_right = 121.0
offset_bottom = 17.0
theme_override_fonts/font = ExtResource("17")
text = "Quit Game?"
horizontal_alignment = 1

[node name="Header" type="Label" parent="."]
modulate = Color(1, 0.945098, 0.909804, 1)
offset_left = -33.0
offset_top = 24.0
offset_right = 81.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("3_k8w8k")
text = "TINY CRATE"
horizontal_alignment = 1

[node name="Signature" type="Label" parent="Header"]
layout_mode = 0
offset_left = 26.0
offset_top = -10.0
offset_right = 87.0
offset_bottom = -4.0
theme_override_fonts/font = ExtResource("1")
text = "Harmony Honey's"

[node name="AudioScroll" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")
volume_db = -7.0
bus = &"SFX"

[node name="AudioPlay" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21")
bus = &"SFX"

[node name="AudioOptions" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20")
bus = &"SFX"

[node name="AudioCredits" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23")
bus = &"SFX"

[node name="AudioQuit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18")
bus = &"SFX"

[node name="AudioYes" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22")
bus = &"SFX"

[node name="AudioNo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19")
bus = &"SFX"

[node name="Stage" type="Node2D" parent="."]

[node name="SolidTileMap" parent="Stage" instance=ExtResource("11")]
layer_0/tile_data = PackedInt32Array(393222, 0, 0, 393223, 0, 1, 393224, 0, 0, 393225, 0, 1, 393226, 536870912, 0, 458758, 0, 1, 524294, 0, 0, 589830, 0, 1, 655366, 536870912, 0, 720902, 0, 1, 786438, 0, 0, 786442, 0, 0, 786443, 0, 1, 786444, 536870912, 0, 786448, 0, 0, 786449, 0, 1, 786450, 536870912, 0, 786451, 0, 1, 786452, 0, 0, 786453, 0, 1, 786454, 536870912, 0)

[node name="DetailTileMap" parent="Stage" instance=ExtResource("8")]
z_index = -11

[node name="GameCamera" parent="Stage" instance=ExtResource("13")]
position = Vector2(96, 72)

[node name="Actors" type="Node2D" parent="Stage"]
script = ExtResource("10")

[node name="Player" parent="Stage/Actors" instance=ExtResource("12")]
position = Vector2(88, 88)
is_attract_mode = true

[node name="Box0" parent="Stage/Actors" instance=ExtResource("9")]
position = Vector2(160, 88)

[node name="Box1" parent="Stage/Actors" instance=ExtResource("9")]
position = Vector2(164, 80)

[node name="Box2" parent="Stage/Actors" instance=ExtResource("9")]
position = Vector2(160, 72)

[node name="Box3" parent="Stage/Actors" instance=ExtResource("9")]
position = Vector2(64, 40)

[node name="SwitchBlue" parent="Stage/Actors" instance=ExtResource("15")]
position = Vector2(64, 44)

[node name="SwitchBlockBlue" parent="Stage/Actors" instance=ExtResource("14")]
position = Vector2(104, 96)

[node name="SwitchBlockBlue2" parent="Stage/Actors" instance=ExtResource("14")]
position = Vector2(112, 96)

[node name="SwitchBlockBlue3" parent="Stage/Actors" instance=ExtResource("14")]
position = Vector2(120, 96)

[editable path="Stage/GameCamera"]
